--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -1,24 +1,257 @@
-<div *ngIf="!authChecked">
-  Loading...
-</div>
+<div class="min-h-screen flex surface-ground">
+  <div id="app-sidebar-1"
+    class="surface-section h-screen hidden lg:block flex-shrink-0 fixed lg:sticky left-0 top-0 z-1 border-right-1 surface-border select-none"
+    style="width:280px">
+    <div class="flex flex-column h-full">
+      <div class="flex align-items-center px-5 flex-shrink-0" style="height:60px">
+        <img src="https://picsum.photos/100/100" alt="Image" height="30">
+      </div>
+      <div class="overflow-y-auto">
+        <ul class="list-none p-3 m-0">
+          <li>
+            <div pRipple class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer"
+              pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
+              leaveActiveClass="slideup">
+              <span class="font-medium">FAVORITES</span>
+              <i class="pi pi-chevron-down"></i>
+            </div>
+            <ul class="list-none p-0 m-0 overflow-hidden">
+              <li>
+                <a pRipple
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  <i class="pi pi-home mr-2"></i>
+                  <span class="font-medium">Dashboard</span>
+                </a>
+              </li>
+              <li>
+                <a pRipple
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  <i class="pi pi-bookmark mr-2"></i>
+                  <span class="font-medium">Bookmarks</span>
+                </a>
+              </li>
+              <li>
+                <a pRipple
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
+                  pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
+                  leaveActiveClass="slideup">
+                  <i class="pi pi-chart-line mr-2"></i>
+                  <span class="font-medium">Reports</span>
+                  <i class="pi pi-chevron-down ml-auto"></i>
+                </a>
+                <ul
+                  class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
+                  <li>
+                    <a pRipple
+                      class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
+                      pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
+                      leaveActiveClass="slideup">
+                      <i class="pi pi-chart-line mr-2"></i>
+                      <span class="font-medium">Revenue</span>
+                      <i class="pi pi-chevron-down ml-auto"></i>
+                    </a>
+                    <ul
+                      class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
+                      <li>
+                        <a pRipple
+                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                          <i class="pi pi-table mr-2"></i>
+                          <span class="font-medium">View</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a pRipple
+                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                          <i class="pi pi-search mr-2"></i>
+                          <span class="font-medium">Search</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a pRipple
+                      class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                      <i class="pi pi-chart-line mr-2"></i>
+                      <span class="font-medium">Expenses</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a pRipple
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  <i class="pi pi-users mr-2"></i>
+                  <span class="font-medium">Team</span>
+                </a>
+              </li>
+              <li>
+                <a pRipple
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  <i class="pi pi-comments mr-2"></i>
+                  <span class="font-medium">Messages</span>
+                  <span
+                    class="inline-flex align-items-center justify-content-center ml-auto bg-blue-500 text-0 border-circle"
+                    style="min-width: 1.5rem; height: 1.5rem">3</span>
+                </a>
+              </li>
+              <li>
+                <a pRipple
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  <i class="pi pi-calendar mr-2"></i>
+                  <span class="font-medium">Calendar</span>
+                </a>
+              </li>
+              <li>
+                <a pRipple
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  <i class="pi pi-cog mr-2"></i>
+                  <span class="font-medium">Settings</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="list-none p-3 m-0">
+          <li>
+            <div pRipple class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer"
+              pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
+              leaveActiveClass="slideup">
+              <span class="font-medium">APPLICATION</span>
+              <i class="pi pi-chevron-down"></i>
+            </div>
+            <ul class="list-none p-0 m-0 overflow-hidden">
+              <li>
+                <a pRipple
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  <i class="pi pi-folder mr-2"></i>
+                  <span class="font-medium">Projects</span>
+                </a>
+              </li>
+              <li>
+                <a pRipple
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  <i class="pi pi-chart-bar mr-2"></i>
+                  <span class="font-medium">Performance</span>
+                </a>
+              </li>
+              <li>
+                <a pRipple
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  <i class="pi pi-cog mr-2"></i>
+                  <span class="font-medium">Settings</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="mt-auto">
+        <hr class="mb-3 mx-3 border-top-1 border-none surface-border" />
+        <a pRipple
+          class="m-3 flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+          <img src="https://picsum.photos/100/100" class="mr-2" style="width: 28px; height: 28px" />
+          <span class="font-medium">Adam Kowalski</span>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="min-h-screen flex flex-column relative flex-auto">
+    <div
+      class="flex justify-content-between align-items-center px-5 surface-0 border-bottom-1 surface-border relative lg:static"
+      style="height:60px">
+      <div class="flex">
+        <a pRipple class="cursor-pointer inline-flex align-items-center justify-content-center lg:hidden text-700 mr-3"
+          pStyleClass="#app-sidebar-1" enterClass="hidden" enterActiveClass="fadeinleft" leaveToClass="hidden"
+          leaveActiveClass="fadeoutleft" [hideOnOutsideClick]="true">
+          <i class="pi pi-bars text-4xl"></i>
+        </a>
+        <span class="p-input-icon-left">
+          <i class="pi pi-search"></i>
+          <input type="text" pInputText class="border-none w-10rem sm:w-20rem" placeholder="Search">
+        </span>
+      </div>
+      <a pRipple class="cursor-pointer block lg:hidden text-700" pStyleClass="@next" enterClass="hidden"
+        enterActiveClass="fadein" leaveToClass="hidden" leaveActiveClass="fadeout" [hideOnOutsideClick]="true">
+        <i class="pi pi-ellipsis-v text-2xl"></i>
+      </a>
+      <ul
+        class="list-none p-0 m-0 hidden lg:flex lg:align-items-center select-none lg:flex-row 
+              surface-section border-1 lg:border-none surface-border right-0 top-100 z-1 shadow-2 lg:shadow-none absolute lg:static">
+        <li>
+          <a pRipple class="flex p-3 lg:px-3 lg:py-2 align-items-center text-600 hover:text-900 hover:surface-100 font-medium border-round cursor-pointer
+                      transition-duration-150 transition-colors">
+            <i class="pi pi-inbox text-base lg:text-2xl mr-2 lg:mr-0"></i>
+            <span class="block lg:hidden font-medium">Inbox</span>
+          </a>
+        </li>
+        <li>
+          <a pRipple class="flex p-3 lg:px-3 lg:py-2 align-items-center text-600 hover:text-900 hover:surface-100 font-medium border-round cursor-pointer
+                      transition-duration-150 transition-colors">
+            <i class="pi pi-bell text-base lg:text-2xl mr-2 lg:mr-0" pBadge severity="danger"></i>
+            <span class="block lg:hidden font-medium">Notifications</span>
+          </a>
+        </li>
+        <li class="border-top-1 surface-border lg:border-top-none">
+          <a pRipple class="flex p-3 lg:px-3 lg:py-2 align-items-center hover:surface-100 font-medium border-round cursor-pointer
+                      transition-duration-150 transition-colors">
+            <img src="https://picsum.photos/100/100" class="mr-3 lg:mr-0" style="width: 32px; height: 32px" />
+            <div class="block lg:hidden">
+              <div class="text-900 font-medium">Josephine Lillard</div>
+              <span class="text-600 font-medium text-sm">Marketing Specialist</span>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="p-5 flex flex-column flex-auto max-w-screen">
+      <div class="border-2 border-dashed surface-border border-round surface-section flex-auto">
 
-<div *ngIf="authChecked">
-  <b>Is logged in:</b> {{isLoggedIn}}
+        <ng-container *ngIf="!authChecked">
+          Loading...
+        </ng-container>
 
-  <br />
+        <ng-container *ngIf="authChecked">
 
-  <button *ngIf="!isLoggedIn" (click)="login()">Login</button>
-  <button *ngIf="isLoggedIn" (click)="logout()">Logout</button>
+          <div class="p-3 flex justify-content-between flex-wrap">
 
-  <br />
-  <hr>
+            <div class="flex lg:flex-none align-items-center justify-content-center font-bold">
+              Is logged in: {{isLoggedIn}}
+            </div>
 
-  <b>No auth check (weather) -></b> <br />
-  {{noAuth | async | json}}
+            <div class="flex lg:flex-none align-items-center justify-content-center">
+              <button pButton class="p-button-sm" *ngIf="!isLoggedIn" (click)="login()" type="button"
+                label="Login"></button>
+              <button pButton class="p-button-sm" *ngIf="isLoggedIn" (click)="logout()" type="button"
+                label="Logout"></button>
+            </div>
 
-  <br />
-  <br />
+          </div>
 
-  <b>Auth check -></b> <br />
-  {{userinfo | async | json}}
+          <div class="grid">
+            <div class="col-12 lg:col-3">
+              <div class="p-3">
+                <b>No auth check (weather) -></b>
+
+                <p-card>
+                  {{noAuth | async | json}}
+                </p-card>
+              </div>
+            </div>
+
+            <div class="col-12 lg:col-9">
+              <div class="p-3">
+                <b>Auth check -></b>
+
+                <p-card style="word-wrap: break-word;">
+                  {{userinfo | async | json}}
+                </p-card>
+              </div>
+            </div>
+          </div>
+
+        </ng-container>
+
+      </div>
+    </div>
+  </div>
 </div>
