add nested modules

--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -2,6 +2,4 @@
   Loading...
 </div>
 
-<app-layout *ngIf="authChecked">
-  <router-outlet></router-outlet>
-</app-layout>
+<router-outlet *ngIf="authChecked"></router-outlet>
