--- a/src/frontend/src/app/pages/secure/layout/navbar/navbar.component.html
+++ b/src/frontend/src/app/pages/secure/layout/navbar/navbar.component.html
@@ -4,7 +4,8 @@
         leaveActiveClass="fadeoutleft" [hideOnOutsideClick]="true">
         <i class="pi pi-bars text-4xl"></i>
     </a>
-    <img src="assets/logo.svg" alt="ingoodhands" height="40" class="mr-0 lg:mr-6">
+    <img src="assets/logo.svg" routerLink="/" style="cursor: pointer;" alt="ingoodhands" height="40"
+        class="mr-0 lg:mr-6">
     <a pRipple class="cursor-pointer block lg:hidden text-700" pStyleClass="@next" enterClass="hidden"
         leaveToClass="hidden" [hideOnOutsideClick]="true">
         <i class="pi pi-ellipsis-v text-2xl"></i>
