--- a/src/frontend/src/app/pages/home/home.component.html
+++ b/src/frontend/src/app/pages/home/home.component.html
@@ -1,28 +1,117 @@
-<div class="min-h-screen flex flex-column surface-ground">
+<div class="min-h-screen flex flex-column">
 
     <app-navbar></app-navbar>
 
     <div class="separator"></div>
 
-    <div class="sm:hidden md:block lg:block xl:block">
-        <app-dinner></app-dinner>
-    </div>
+    <div class="hidden md:block lg:block xl:block">
+        <app-splash-img path="assets/img/man.webp" text="sharing is caring"></app-splash-img>
 
-    <p-tabView>
-        <p-tabPanel header="Donate">
-            Donate
-        </p-tabPanel>
-        <p-tabPanel header="Request help">
-            Request help
-        </p-tabPanel>
-        <p-tabPanel header="Work">
-            Work
-        </p-tabPanel>
-    </p-tabView>
+        <div class="core-container">
+            <div class="p-8">
+                <div class="shadow-6 relative flex" style="min-height: 300px;">
+                    <p-tabView class="w-full">
+                        <p-tabPanel header="Donate">
+                            <app-donate></app-donate>
+                        </p-tabPanel>
+                        <p-tabPanel header="Request help">
+                            <app-request-help></app-request-help>
+                        </p-tabPanel>
+                        <p-tabPanel header="Work">
+                            <app-work></app-work>
+                        </p-tabPanel>
+                    </p-tabView>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="md:hidden">
-        <app-dinner></app-dinner>
+        <p-tabView>
+            <p-tabPanel header="Donate">
+                <app-donate></app-donate>
+            </p-tabPanel>
+            <p-tabPanel header="Request help">
+                <app-request-help></app-request-help>
+            </p-tabPanel>
+            <p-tabPanel header="Work">
+                <app-work></app-work>
+            </p-tabPanel>
+        </p-tabView>
+
+        <app-splash-img path="assets/img/man.webp" text="sharing is caring"></app-splash-img>
     </div>
 
+    <div class="core-container">
+        <div class="p-4 md:p-8">
+            <div class="p-2" style="min-height: 300px;">
+                <div class="flex align-items-center justify-content-center text-primary">
+                    <div class="block">
+                        <h2>„The people who give you their food give you their heart”</h2>
+                    </div>
+                </div>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet massa sem. Nunc erat turpis,
+                    tempor id molestie sed, porta et neque. Vestibulum a dui ut nibh egestas tempor. Donec nec sapien
+                    tellus. Nunc lacinia nisl metus, vel lacinia justo mollis ut. Fusce nulla urna, maximus ut ipsum eu,
+                    placerat venenatis erat. Maecenas mattis sit amet justo vel dictum. Quisque tincidunt felis justo,
+                    sit
+                    amet porta neque vehicula eu. Maecenas lacinia sed libero quis ultricies.
+                    <br />
+                    Ut consequat ac quam eu sodales. Nulla rutrum quam quis eleifend finibus. Morbi congue leo non
+                    elementum
+                    mattis. Nullam sed lectus vitae nisl tristique dapibus at vitae ante. Ut id malesuada arcu. Mauris
+                    risus
+                    eros, bibendum vel dolor quis, tincidunt blandit neque. Suspendisse convallis lectus nisl. Sed
+                    maximus
+                    faucibus arcu, eget tincidunt enim convallis non. Praesent varius volutpat nisi, pellentesque
+                    interdum
+                    diam venenatis ac. Donec viverra rhoncus dolor, in feugiat velit aliquet at. Donec eget lorem eu
+                    neque
+                    bibendum varius. Sed in dui ante. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                    Vestibulum dignissim sem libero, vel lobortis enim vehicula et.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <app-splash-img path="assets/img/home.webp"></app-splash-img>
+
+    <div class="core-container">
+        <div class="p-4 md:p-8">
+            <div class="border-dashed pl-3 pr-3" style="min-height: 300px;">
+                <h2>Our mission</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet massa sem. Nunc erat
+                    turpis,
+                    tempor id molestie sed, porta et neque. Vestibulum a dui ut nibh egestas tempor. Donec nec
+                    sapien
+                    tellus. Nunc lacinia nisl metus, vel lacinia justo mollis ut. Fusce nulla urna, maximus ut ipsum
+                    eu,
+                    placerat venenatis erat. Maecenas mattis sit amet justo vel dictum. Quisque tincidunt felis
+                    justo, sit
+                    amet porta neque vehicula eu. Maecenas lacinia sed libero quis ultricies.
+                    <br />
+                    Ut consequat ac quam eu sodales. Nulla rutrum quam quis eleifend finibus. Morbi congue leo non
+                    elementum
+                    mattis. Nullam sed lectus vitae nisl tristique dapibus at vitae ante. Ut id malesuada arcu.
+                    Mauris risus
+                    eros, bibendum vel dolor quis, tincidunt blandit neque. Suspendisse convallis lectus nisl. Sed
+                    maximus
+                    faucibus arcu, eget tincidunt enim convallis non. Praesent varius volutpat nisi, pellentesque
+                    interdum
+                    diam venenatis ac. Donec viverra rhoncus dolor, in feugiat velit aliquet at. Donec eget lorem eu
+                    neque
+                    bibendum varius. Sed in dui ante. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                    Vestibulum dignissim sem libero, vel lobortis enim vehicula et.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer surface-ground p-5">
+        <div class="flex justify-content-center align-items-center">{{url}}</div>
+    </div>
 
 </div>
