--- a/src/frontend/src/app/pages/home/navbar/navbar.component.html
+++ b/src/frontend/src/app/pages/home/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="surface-overlay py-3 px-3 flex align-items-center justify-content-between relative lg:static">
-    <img src="assets/logo.svg" alt="ingoodhands" height="40" class="mr-0 lg:mr-6">
+    <img src="assets/logo.svg" alt="ingoodhands" height="40" class="ml-3 mr-0 lg:mr-6">
     <a pRipple class="cursor-pointer block lg:hidden text-700" pStyleClass="@next" enterClass="hidden"
         leaveToClass="hidden" [hideOnOutsideClick]="true">
         <i class="pi pi-ellipsis-v text-2xl"></i>
