--- a/src/frontend/src/app/pages/home/donate/donate.component.html
+++ b/src/frontend/src/app/pages/home/donate/donate.component.html
@@ -13,11 +13,10 @@
         <div class="form-area m-3 p-3 border-dashed">
             <div class="grid">
                 <div class="col-12">
-                    1 - Plusik, lista produktow (nazwa, ilosc, kg/szt)
-                    2 - Wybór kraju i lista miast
-                    3 - Potwierdzenie i przekierowanie do logowania
-                    ---
-                    TODO: PRZKEIEROWANIA wszystkicjh przyciskow !!!
+                    TODO: (zadanie)<br />
+                    1 - Plusik, lista produktow (nazwa, ilosc, kg/szt)<br />
+                    2 - Wybór kraju i lista miast<br />
+                    3 - Potwierdzenie i przekierowanie do logowania<br />
                 </div>
                 <div class="col-12">
                     <div class="flex justify-content-end align-items-center mr-3">
