--- a/src/frontend/src/app/pages/home/work/work.component.html
+++ b/src/frontend/src/app/pages/home/work/work.component.html
@@ -27,5 +27,5 @@
         You can help today, if you are interested, click the button below.
     </p>
 
-    <button pButton type="button" label="I CAN TRY" class="p-button-success"></button>
+    <button pButton type="button" routerLink="/secure" label="I CAN TRY" class="p-button-success"></button>
 </div>
