change landing page texts

--- a/src/frontend/src/app/pages/home/home.component.html
+++ b/src/frontend/src/app/pages/home/home.component.html
@@ -47,30 +47,30 @@
             <div class="p-2" style="min-height: 300px;">
                 <div class="flex align-items-center justify-content-center text-primary">
                     <div class="block">
-                        <h2>„The people who give you their food give you their heart”</h2>
+                        <h2>„Help others and give something back. That's what life is all about...”
+                        </h2>
                     </div>
                 </div>
 
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet massa sem. Nunc erat turpis,
-                    tempor id molestie sed, porta et neque. Vestibulum a dui ut nibh egestas tempor. Donec nec sapien
-                    tellus. Nunc lacinia nisl metus, vel lacinia justo mollis ut. Fusce nulla urna, maximus ut ipsum eu,
-                    placerat venenatis erat. Maecenas mattis sit amet justo vel dictum. Quisque tincidunt felis justo,
-                    sit
-                    amet porta neque vehicula eu. Maecenas lacinia sed libero quis ultricies.
+                    This quote by Arnold Schwarzenegger highlights the idea that the true purpose of life is to assist
+                    others and make a positive impact in the world. By giving back and helping those in need, we can
+                    make a meaningful difference in the lives of others and fulfill our own sense of purpose. The quote
+                    emphasizes the idea that it's not just about accumulating wealth or personal gain, but about using
+                    our resources and abilities to help others and make a lasting impact.
                     <br />
-                    Ut consequat ac quam eu sodales. Nulla rutrum quam quis eleifend finibus. Morbi congue leo non
-                    elementum
-                    mattis. Nullam sed lectus vitae nisl tristique dapibus at vitae ante. Ut id malesuada arcu. Mauris
-                    risus
-                    eros, bibendum vel dolor quis, tincidunt blandit neque. Suspendisse convallis lectus nisl. Sed
-                    maximus
-                    faucibus arcu, eget tincidunt enim convallis non. Praesent varius volutpat nisi, pellentesque
-                    interdum
-                    diam venenatis ac. Donec viverra rhoncus dolor, in feugiat velit aliquet at. Donec eget lorem eu
-                    neque
-                    bibendum varius. Sed in dui ante. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                    Vestibulum dignissim sem libero, vel lobortis enim vehicula et.
+                    <br />
+                    Our web application is designed to make it easy for donors to contribute and for aid to reach those
+                    in need quickly and efficiently. We have four key players in our system: donors, beneficiaries,
+                    warehouse keepers, and delivery drivers, all working together to bring about positive change. Donors
+                    can easily log in and provide essential goods, and beneficiaries can request specific items they
+                    need. Warehouse keepers receive and organize the donations, and delivery drivers bring them to those
+                    in need.
+                    <br />
+                    <br />
+                    We also believe that kindness and generosity should always be appreciated and
+                    valued. Our goal is to create a community where people come together to support each other in times
+                    of need and where the act of giving is celebrated.
                 </p>
             </div>
         </div>
@@ -83,28 +83,20 @@
             <div class="border-dashed pl-3 pr-3" style="min-height: 300px;">
                 <h2>Our mission</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet massa sem. Nunc erat
-                    turpis,
-                    tempor id molestie sed, porta et neque. Vestibulum a dui ut nibh egestas tempor. Donec nec
-                    sapien
-                    tellus. Nunc lacinia nisl metus, vel lacinia justo mollis ut. Fusce nulla urna, maximus ut ipsum
-                    eu,
-                    placerat venenatis erat. Maecenas mattis sit amet justo vel dictum. Quisque tincidunt felis
-                    justo, sit
-                    amet porta neque vehicula eu. Maecenas lacinia sed libero quis ultricies.
+                    At ingoodhands, our mission is to bring hope and comfort to those in need, especially in war-torn
+                    Ukraine where people are struggling to survive. We believe that every human being deserves access to
+                    basic necessities such as food, drink, and protective equipment, and it is our goal to make that a
+                    reality.
                     <br />
-                    Ut consequat ac quam eu sodales. Nulla rutrum quam quis eleifend finibus. Morbi congue leo non
-                    elementum
-                    mattis. Nullam sed lectus vitae nisl tristique dapibus at vitae ante. Ut id malesuada arcu.
-                    Mauris risus
-                    eros, bibendum vel dolor quis, tincidunt blandit neque. Suspendisse convallis lectus nisl. Sed
-                    maximus
-                    faucibus arcu, eget tincidunt enim convallis non. Praesent varius volutpat nisi, pellentesque
-                    interdum
-                    diam venenatis ac. Donec viverra rhoncus dolor, in feugiat velit aliquet at. Donec eget lorem eu
-                    neque
-                    bibendum varius. Sed in dui ante. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                    Vestibulum dignissim sem libero, vel lobortis enim vehicula et.
+                    <br />
+                    Our mission goes beyond simply delivering goods. It is rooted in a deep sense of compassion and a
+                    desire to make a positive impact in the world. Every donation, no matter how small, has the power to
+                    make a significant difference in someone's life and bring hope to those in need.
+                    <br />
+                    <br />
+                    In conclusion, our mission at ingoodhands is to bring hope and comfort to those in need, through the
+                    power of kindness, generosity, and technology. Join us in our efforts to make a positive impact in
+                    the world and show that even in times of conflict, the human spirit can still shine through.
                 </p>
             </div>
         </div>
