--- a/src/frontend/src/app/pages/home/donate/stepper/donate-stepper.component.html
+++ b/src/frontend/src/app/pages/home/donate/stepper/donate-stepper.component.html
@@ -2,7 +2,7 @@
 
 <div class="spacer"></div>
 
-<div class="form-area md:m-3 md:p-3">
+<div class="form-area md:m-3 lg:p-3">
     <div class="grid">
         <div class="col-12">
             <div class="step-area border-dashed">
