--- a/src/frontend/src/app/pages/home/donate/stepper/donate-stepper.component.html
+++ b/src/frontend/src/app/pages/home/donate/stepper/donate-stepper.component.html
@@ -21,7 +21,9 @@
                     (click)="service.step1.onClearClick()"></button>
                 <button pButton type="button" [disabled]="service.currentIndex === 0" label="BACK"
                     class="p-button-outlined stepper-button" (click)="onBackClick()"></button>
-                <button pButton type="button" [label]="service.currentIndex == 2 ? 'CONFIRM ' : 'NEXT'"
+                <button *ngIf="service.currentIndex === 2" pButton type="button" label="LOOKS GOOD"
+                    class="p-button-outlined stepper-button p-button-success" (click)="onNextClick()"></button>
+                <button *ngIf="service.currentIndex !== 2" pButton type="button" label="NEXT"
                     class="p-button-outlined stepper-button" (click)="onNextClick()"></button>
             </div>
         </div>
