--- a/src/frontend/src/app/pages/secure/start/start.component.html
+++ b/src/frontend/src/app/pages/secure/start/start.component.html
@@ -1,6 +1,7 @@
 <div class="p-3 flex justify-content-between flex-wrap">
 
     <div class="flex lg:flex-none align-items-center justify-content-center font-bold">
+        Start <br />
         Is logged in: {{auth.isLoggedIn}}
     </div>
 
