--- a/src/frontend/src/app/pages/secure/my-donations/my-donations.component.html
+++ b/src/frontend/src/app/pages/secure/my-donations/my-donations.component.html
@@ -1,20 +1,16 @@
 <div class="grid">
-    <div class="col-12 lg:col-3">
-        <div class="p-3">
-            My donations
-        </div>
-    </div>
-
-    <div class="col-12 lg:col-9">
-        <div class="p-3">
-            234
-        </div>
-    </div>
-
     <div class="col-12 lg:col-12">
         <div class="p-3">
             <p-card>
-                456
+                <h1 class="text-2xl font-bold m-0">My donations</h1>
+
+                <ng-container *ngIf="pagedResult">
+
+                    <!-- table here -->
+
+                    <p-paginator [rows]="pageSize" [totalRecords]="pagedResult.rowCount"
+                        (onPageChange)="paginate($event)"></p-paginator>
+                </ng-container>
             </p-card>
         </div>
     </div>
