--- a/src/frontend/src/app/pages/secure/start/start.component.html
+++ b/src/frontend/src/app/pages/secure/start/start.component.html
@@ -2,7 +2,7 @@
     <div class="col-12 lg:col-12">
         <div class="p-3">
             <p-card>
-                <h1 class="text-2xl font-bold">Welcome to ingoodhands</h1>
+                <h1 class="text-2xl font-bold m-0">Welcome to ingoodhands</h1>
 
                 <div class="p-1"></div>
 
