fix(my-donations): add json view

--- a/src/frontend/src/app/pages/secure/my-donations/my-donations.component.html
+++ b/src/frontend/src/app/pages/secure/my-donations/my-donations.component.html
@@ -6,7 +6,10 @@
 
                 <ng-container *ngIf="pagedResult">
 
-                    <!-- table here -->
+                    <div class="p-3">
+                        <!-- table here -->
+                        {{pagedResult.queryable | json}}}
+                    </div>
 
                     <p-paginator [rows]="pageSize" [totalRecords]="pagedResult.rowCount"
                         (onPageChange)="paginate($event)"></p-paginator>
