--- a/src/frontend/src/app/pages/secure/layout/navbar/navbar.component.html
+++ b/src/frontend/src/app/pages/secure/layout/navbar/navbar.component.html
@@ -15,21 +15,16 @@
         <li class="lg:mr-1">
             <a pRipple
                 class="flex p-3 align-items-center text-600 hover:text-900 hover:surface-100 font-medium border-round cursor-pointer transition-colors transition-duration-150 lg:border-circle">
-                <i class="pi pi-inbox text-base lg:text-2xl mr-2 lg:mr-0"></i>
-                <span class="block lg:hidden font-medium">Inbox</span>
-            </a>
-        </li>
-        <li class="lg:mr-1">
-            <a pRipple
-                class="flex p-3 align-items-center text-600 hover:text-900 hover:surface-100 font-medium border-round cursor-pointer transition-colors transition-duration-150 lg:border-circle">
                 <i class="pi pi-bell text-base lg:text-2xl mr-2 lg:mr-0" pBadge severity="danger"></i>
-                <span class="block lg:hidden font-medium">Notifications</span>
+                <span pTooltip="Notifications" tooltipPosition="bottom"
+                    class="block lg:hidden font-medium">Notifications</span>
             </a>
         </li>
         <li class="border-top-1 surface-border lg:border-top-none lg:mt-0 mt-2 lg:pt-0 pt-2">
             <a pRipple
                 class="flex p-3 align-items-center hover:surface-100 font-medium border-round cursor-pointer transition-colors transition-duration-150 lg:border-circle">
-                <img [src]="picture | async" alt="icon of currently logged user" class="mr-3 lg:mr-0"
+                <img pTooltip="User settings" tooltipPosition="bottom" routerLink="/secure/user-settings"
+                    [src]="picture | async" alt="icon of currently logged user" class="mr-3 lg:mr-0"
                     style="width: 25px; height: 25px" />
                 <div class="block lg:hidden">
                     <div class="text-900 font-medium">{{ name | async }}</div>
