--- a/src/frontend/src/app/pages/secure/my-donations/my-donations.component.html
+++ b/src/frontend/src/app/pages/secure/my-donations/my-donations.component.html
@@ -1,5 +1,14 @@
 <div class="grid">
-    <div class="col-12 lg:col-12">
+
+    <div class="col-12">
+        <div class="pt-3 flex align-items-center justify-content-center">
+            <div class="shadow-3" style="background-color:#deffea; border-radius: 30px; padding:20px">
+                Your donator score: <b [countUp]="service.score$ | async" [duration]="5000"></b>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-12">
         <div class="p-3">
             <p-card>
                 <h1 class="text-2xl font-bold m-0">My donations</h1>
