--- a/src/frontend/src/app/pages/secure/layout/sidebar/sidebar.component.html
+++ b/src/frontend/src/app/pages/secure/layout/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     class="surface-card hidden lg:block flex-shrink-0 absolute lg:static left-0 top-0 z-1 select-none shadow-2"
     style="width:280px;border-radius: 12px">
     <div class="flex flex-column h-full">
-        <div class="overflow-y-auto">
+        <div class="overflow-y-auto" *ngIf="auth.dbUser">
             <div class="pb-5"></div>
             <ul *ngFor="let group of config" class="list-none px-3 pb-3 pt-0 m-0">
                 <li>
@@ -11,7 +11,7 @@
                     </div>
                     <ul class="list-none p-0 m-0 overflow-hidden">
                         <li *ngFor="let page of group.pages">
-                            <a pRipple [routerLink]="page.routerLink"
+                            <a *ngIf="!page.role || userHasRole(page.role)" pRipple [routerLink]="page.routerLink"
                                 class="flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-colors border-right-2 transition-duration-150"
                                 [ngClass]="router.url === page.routerLink ? 'bg-purple-50 text-purple-500 border-purple-500' : 'border-transparent'">
                                 <i [class]="page.icon"></i>
