--- a/src/frontend/src/app/pages/home/request-help/request-help.component.html
+++ b/src/frontend/src/app/pages/home/request-help/request-help.component.html
@@ -9,5 +9,6 @@
         need. We try to make every effort to deliver goods as soon as possible.
     </p>
 
-    <button pButton type="button" label="REQUEST NOW" routerLink="/secure" class="p-button-rounded"></button>
+    <button pButton type="button" label="REQUEST NOW" routerLink="/secure/request-help"
+        class="p-button-rounded"></button>
 </div>
